<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.librawfx</groupId>
    <artifactId>LibRawFX</artifactId>
    <version>1.0</version>
    
    <name>LibRawFX</name>
    <description>This installs the native lib libraw as a JavaFX Image format provider similar to imageIO before on Swing</description>
    <url>https://github.com/lanthale/librawfx</url>
 
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
 
    <scm>
        <url>https://github.com/lanthale/LibRawFX.git</url>
    </scm>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>        
    </properties>
    
    <repositories>
        <repository>
            <id>oss.sonatype.org</id>
            <name>Sonatype Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>  
        <repository>
            <id>bintray-jerady-maven</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/jerady/maven</url>            
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository> 
        <repository>
            <id>com.springsource.repository.bundles.external</id>
            <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
            <url>http://repository.springsource.com/maven/bundles/external</url>
        </repository>
           
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>16</version>
        </dependency>               
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>16</version>
        </dependency>               
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>16</version>
        </dependency>               
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>16</version>
        </dependency>               
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/ressources</directory>
                <excludes>
                    <exclude>**/*.cr2</exclude>
                    <exclude>**/*.h</exclude>
                    <exclude>**/*.lib</exclude>
                    <exclude>**/*.X3F</exclude>
                    <exclude>**/*.ppm</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>16</release>
                    <fork>true</fork>
                    <compilerArgs>                        
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</arg>                                
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</arg>
                    </compilerArgs>                                        
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>org.librawfx.App</mainClass>                    
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <options>                                
                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit</option>                                
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE profiling -->
                        <id>ide-profile</id>
                        <configuration>
                            <options>
                                <option>${profiler.jvmargs.arg1}</option>
                                <option>${profiler.jvmargs.arg2}</option>
                                <option>${profiler.jvmargs.arg3}</option>
                                <option>${profiler.jvmargs.arg4}</option>
                                <option>${profiler.jvmargs.arg5}</option>
                                <option>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</option>                                
                                <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
